--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div id="header">
       <div class="left">
         <div class="logo">
-          <img src="/portfolio website/image/001_logo_design-removebg-preview.png" alt="logo">
+          <img src="/image/001_logo_design-removebg-preview.png" alt="logo">
         </div>
       </div>
       <div class="middle">
@@ -44,7 +44,7 @@
   <!-------------------------------------------- Home ---------------------------------------------->
   <div id="home">
       <div id="home-left">
-        <img src="/portfolio website/image/man.png" alt="My Picture">
+        <img src="/image/man.png" alt="My Picture">
       </div>
       <div id="home-right">
         <h3 class="turnary-text">Najaf Ali Balti</h3>
@@ -60,7 +60,7 @@
   <!-------------------------------------------- About Us ---------------------------------------------->
   <div id="about">
     <div id="about-left">
-      <img src="/portfolio website/image/man-2.png" alt="">
+      <img src="/image/man-2.png" alt="">
     </div>
     <div id="about-right">
       <h3 class="turnary-text">About <span>Me</span></h3>
